Bug 695671 - eps2write gives incorrect bounding box with rotated text
Summary: eps2write gives incorrect bounding box with rotated text
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PS Writer (show other bugs)
Version: 9.15
Hardware: PC Windows 7
: P4 normal
Assignee: Ken Sharp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-08 13:34 UTC by David Kinniburgh
Modified: 2014-11-10 06:34 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
use for the above demo (8.18 KB, application/postscript)
2014-11-08 13:34 UTC, David Kinniburgh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Kinniburgh 2014-11-08 13:34:06 UTC
Created attachment 11314 [details]
use for the above demo

gswin64c -sPAPERSIZE=a4 -sDEVICE=eps2write -dBATCH -dNOPAUSE -q -sOutputFile=testc.eps testc.ps

Using GS 9.15, the left and right margins of the calculated bounding box are not quite right. They appear to be on the baseline of the text rather than its outer limits. This problem does not occur with non-rotated text. Is this my error or yours?

It worked properly with the deprecated epswrite in GS 9.14.
Comment 1 Ken Sharp 2014-11-10 06:34:01 UTC
I believe commit c98c38c8b9912fc3510ef2e1e53c3ff1837b0519 fixes this problem. I don't remember why the clamping to the text enumerator origin was done in the first place, it doesn't make any sense to me now. However this may need more work in the future.

In the meantime, this should make rotated text contribute its 'height' to the bounding box appropriately.